k8s/base/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-gateway
  labels:
    app: craftcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: craftcloud-system-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "localhost"
      http:
        paths:
          # --- Identity Service Routes ---
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5000
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5000

          # --- Telemetry Service Routes ---
          - path: /api/internal
            pathType: Prefix
            backend:
              service:
                name: telemetry-service
                port:
                  number: 5000
          - path: /api/incidents
            pathType: Prefix
            backend:
              service:
                name: telemetry-service
                port:
                  number: 5000

          # --- Fleet Service Routes ---
          - path: /api/servers
            pathType: Prefix
            backend:
              service:
                name: fleet-service
                port:
                  number: 5000

          # --- Dashboard Route ---
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
